--- a/.github/workflows/wisecow-build.yaml
+++ b/.github/workflows/wisecow-build.yaml
@@ -57,3 +57,41 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ github.repository }}:latest
           labels: ${{ steps.metadata.outputs.labels }}
           push: true
+
+  deploy:
+  
+    name: Deploy to Kubernetes
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ secrets.KUBECONFIG != '' }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'latest'
+
+      - name: Restore kubeconfig
+        run: |
+          echo "${{ secrets.KUBECONFIG }}" | base64 --decode > kubeconfig
+          export KUBECONFIG=$(pwd)/kubeconfig
+          kubectl version --client
+
+      - name: Create namespace (if not exists)
+        run: |
+          export KUBECONFIG=$(pwd)/kubeconfig
+          kubectl apply -f k8s/namespace.yaml
+
+      - name: Apply Kubernetes manifests
+        run: |
+          export KUBECONFIG=$(pwd)/kubeconfig
+          kubectl apply -f k8s/service.yaml -n wisecow
+          kubectl apply -f k8s/ingress.yaml -n wisecow || true
+          kubectl apply -f k8s/deployment.yaml -n wisecow
+
+      - name: Update Deployment with latest image
+        run: |
+          export KUBECONFIG=$(pwd)/kubeconfig
+          kubectl -n wisecow set image deployment/wisecow wisecow=${{ env.REGISTRY }}/${{ github.repository }}:latest        
