--- a/k8s-manifest/deployment.yaml
+++ b/k8s-manifest/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: wisecow
-          image: wisecow:latest   
+          image: ghcr.io/alanjino/wisecow:latest   
           ports:
             - containerPort: 4499
