--- a/.github/workflows/wisecow-build.yaml
+++ b/.github/workflows/wisecow-build.yaml
@@ -59,11 +59,12 @@ jobs:
           push: true
 
   deploy:
-
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
     needs: build
-    if: ${{ secrets.KUBECONFIG != '' }}
+    env:
+      KUBECONFIG_B64: ${{ secrets.KUBECONFIG }}
+    if: ${{ env.KUBECONFIG_B64 != '' }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -75,7 +76,7 @@ jobs:
 
       - name: Restore kubeconfig
         run: |
-          echo "${{ secrets.KUBECONFIG }}" | base64 --decode > kubeconfig
+          echo "$KUBECONFIG_B64" | base64 --decode > kubeconfig
           export KUBECONFIG=$(pwd)/kubeconfig
           kubectl version --client
 
@@ -94,4 +95,4 @@ jobs:
       - name: Update Deployment with latest image
         run: |
           export KUBECONFIG=$(pwd)/kubeconfig
-          kubectl -n wisecow set image deployment/wisecow wisecow=${{ env.REGISTRY }}/${{ github.repository }}:latest        
+          kubectl -n wisecow set image deployment/wisecow wisecow=${{ env.REGISTRY }}/${{ github.repository }}:latest
