--- a/.github/workflows/wisecow-build.yaml
+++ b/.github/workflows/wisecow-build.yaml
@@ -60,7 +60,7 @@ jobs:
 
   deploy:
     name: Deploy to Kubernetes
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: build
     steps:
       - name: Checkout repo
