--- a/.github/workflows/wisecow-build.yaml
+++ b/.github/workflows/wisecow-build.yaml
@@ -74,7 +74,7 @@ jobs:
           kubectl apply -f k8s-manifest/deployment.yaml -n wisecow --validate=false
           kubectl apply -f k8s-manifest/service.yaml -n wisecow --validate=false
           kubectl apply -f k8s-manifest/ingress.yaml -n wisecow --validate=false 
-          kubectl -n wisecow set image deployment/wisecow-deployment wisecow=${{ env.REGISTRY }}/${{ github.repository }}:latest
+          kubectl -n wisecow set image deployment/wisecow-deployment wisecow=ghcr.io/alanjino/wisecow:latest
           kubectl rollout status deployment/wisecow-deployment -n wisecow
           
 
