--- a/.github/workflows/wisecow-build.yaml
+++ b/.github/workflows/wisecow-build.yaml
@@ -1,65 +1,67 @@
-name: Container Docker Image for main
+name: Wisecow CI/CD
 
 on:
   push:
+    branches:
+      - main
     paths-ignore:
       - '**.md'
-    branches:
-      - 'main'
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_SHA: ${{ github.sha }}
 
 jobs:
 
   build:
-
-    runs-on: ubuntu-latest 
+    name: Build & Push Docker Image
+    runs-on: ubuntu-latest
     permissions:
       packages: write
       id-token: write
       contents: read
-      actions: read
-      security-events: write
-    env:
-      REGISTRY: ghcr.io
-      GH_URL: https://github.com
     steps:
-      - name: Checkout GitHub Action
+      - name: Checkout code
         uses: actions/checkout@v3
-        
+
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Docker metadata
         id: metadata
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ github.repository }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=raw,value={{sha}},enable=${{ github.ref_type != 'tag' }}
-          flavor: |
-            latest=true
+            type=raw,value=latest
+            type=raw,value=${{ env.IMAGE_SHA }}
 
-      - name: Login to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.TOKEN }}
 
-      - name: Build image and push to GitHub Container Registry
-        id: docker_build
+      - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
-          file:  ./Dockerfile
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}:latest
-          labels: ${{ steps.metadata.outputs.labels }}
+          file: ./Dockerfile
           push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_SHA }}
+
   deploy:
+    name: Deploy to Kubernetes
     runs-on: self-hosted
     needs: build
+    env:
+      IMAGE_SHA: ${{ github.sha }}
+      REGISTRY: ghcr.io
+      IMAGE_NAME: ${{ github.repository }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -69,42 +71,18 @@ jobs:
           kubectl cluster-info
           kubectl get nodes
 
-      - name: Apply manifests
+      - name: Apply Kubernetes manifests
         run: |
+
           kubectl apply -f k8s-manifest/deployment.yaml -n wisecow --validate=false
           kubectl apply -f k8s-manifest/service.yaml -n wisecow --validate=false
-          kubectl apply -f k8s-manifest/ingress.yaml -n wisecow --validate=false 
-          kubectl -n wisecow set image deployment/wisecow-deployment wisecow=ghcr.io/alanjino/wisecow:latest
+          kubectl apply -f k8s-manifest/ingress.yaml -n wisecow --validate=false
+
+      - name: Update Deployment with SHA image
+        run: |
+          kubectl -n wisecow set image deployment/wisecow-deployment \
+            wisecow=ghcr.io/alanjino/wisecow:${{ env.IMAGE_SHA }}
           kubectl rollout status deployment/wisecow-deployment -n wisecow
-          
 
-  # deploy:
-  #   name: Deploy to Kubernetes
-  #   runs-on: self-hosted
-  #   needs: build
-  #   steps:
-  #     - name: Checkout repo
-  #       uses: actions/checkout@v3
 
-  #     - name: Install kubectl
-  #       uses: azure/setup-kubectl@v3
-  #       with:
-  #         version: 'latest'
-
-  #     - name: Restore kubeconfig
-  #       run: |
-  #         echo "$KUBECONFIG_B64" | base64 --decode > kubeconfig
-  #         export KUBECONFIG=$(pwd)/kubeconfig
-  #         kubectl version --client
-
-  #     - name: Apply Kubernetes manifests
-  #       run: |
-  #         export KUBECONFIG=$(pwd)/kubeconfig
-  #         kubectl apply -f k8s-manifest/deployment.yaml -n wisecow --validate=false
-  #         kubectl apply -f k8s-manifest/service.yaml -n wisecow --validate=false
-  #         kubectl apply -f k8s-manifest/ingress.yaml -n wisecow --validate=false 
-         
-  #     - name: Update Deployment with latest image
-  #       run: |
-  #         export KUBECONFIG=$(pwd)/kubeconfig
-  #         kubectl -n wisecow set image deployment/wisecow wisecow=${{ env.REGISTRY }}/${{ github.repository }}:latest
+ 
